[tool.poetry]
name = "mechbot"
version = "0.1.0"
description = ""
authors = ["Sebastian Erives <s3rivesmejia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
discord = "^1.0.1"
pychal = "^1.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
